# negocio

./: .env.ai-services  .env.quantum  AI-ENGINEERING-FOUNDATIONS.md  AI-SERVICES-ARCHITECTURE.md  AI-TRANSFORMATION-PLAN.md  CLAUDE.md  PHASE-1-SERVICE-ARCHITECTURE-PLAN.md  QUANTUM-MIGRATION-GUIDE.md  QUANTUM-SECURE-ROADMAP.md  SERVICE-IMPLEMENTATION.md  SERVICE-SPECIFIC-QUANTUM-PLANS.md  SYSTEM-DATA-FLOW-ARCHITECTURE.md  behaivorGuard-workspace.code-workspace  claude-planes  code_error_checker_spec.md  docker-compose.ai-services.yml  docker-compose.identity.yml  docker-compose.quantum.yml  docker-compose.redis.yml  notas.md  package-lock.json  start-ai-services.sh  start-identity-services.sh  start-quantum-services.sh  stop-ai-services.sh  stop-identity-services.sh  stop-quantum-services.sh  test-api-endpoints.js
.github/workflows/: integration-tests.yml
bg-ai-dashboard/: next.config.js  package.json
bg-ai-dashboard/src/app/: globals.css  layout.tsx  page.tsx
bg-ai-dashboard/src/components/dashboard/: metrics-card.tsx  real-time-chart.tsx  threat-map.tsx
bg-ai-dashboard/src/hooks/: use-auth.ts  use-socket.ts
bg-identity-ai/: .dockerignore  .env  .env.example  .env.production  .eslintrc.js  AI-ML-IMPLEMENTATION-PLAN.md  AI-ML-TESTING-PLAN.md  COMPREHENSIVE-ML-ENHANCEMENT-PLAN.md  COMPREHENSIVE-TESTING-REPORT.md  DEPLOYMENT-ENVIRONMENTS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-PROCEDURES-ZERO-CONFIG.md  DEPLOYMENT-PROCEDURES.md  DEPLOYMENT-UPDATE-v2.0.1.md  DEVELOPMENT-ROADMAP.md  Dockerfile  PERFORMANCE-BASELINE.md  PERFORMANCE-OPTIMIZATION-REPORT.md  PHASE-2B-API-DOCUMENTATION.md  PHASE-2B-COMPLETION-ANALYSIS.md  PHASE-2B-INTEGRATION-GUIDES.md  QUICK-OPERATIONS-GUIDE.md  README.md  THREATGUARD-AGENT-SPECIFICATION.md  docker-compose.production.yml  package-lock.json  package.json  rate-limit-check.sh  redis.conf  test-concurrent-reqs.sh  tsconfig.json  vitest.config.integration.ts  vitest.config.ts
bg-identity-ai/coverage/: coverage-final.json  index.html
bg-identity-ai/coverage/bg-identity-ai/: .eslintrc.js.html  index.html
bg-identity-ai/coverage/bg-identity-ai/src/: index.html  index.ts.html
bg-identity-ai/monitoring/: prometheus.yml
bg-identity-ai/nginx/: nginx.conf
bg-identity-ai/nginx/conf.d/: bg-threat-ai.conf
bg-identity-ai/scripts/: comprehensive-system-test.js  deploy-production.sh  generate-ssl-cert.sh  performance-benchmark.js  performance-monitor.js  rollback-deployment.sh  runtime-integration-test.js  test-integration.js  test-performance-improvements.js  test-redis-monitoring.js  validate-environment.js  websocket-load-test.js
bg-identity-ai/src/: index.ts
bg-identity-ai/src/__tests__/e2e/: threat-detection-workflow.test.ts
bg-identity-ai/src/__tests__/integration/: health-endpoints.test.ts  test-setup.ts  (+4 more)
bg-identity-ai/src/adapters/: ml-threat-adapters.ts
bg-identity-ai/src/lib/: bg-web-client.ts  logger.ts  redis-client.ts
bg-identity-ai/src/middleware/: auth.ts  error-handler.ts
bg-identity-ai/src/routes/: analytics.ts  biometric.ts  compliance.ts  document.ts  health.ts  iam.ts  integrations.ts  ml-management.ts  threat.ts
bg-identity-ai/src/services/: adaptive-throttling-service.ts  biometric-service.ts  document-service.ts  enhanced-stream-manager.ts  enhanced-websocket-stream-service.ts  ml-threat-detection-service.ts  smart-filtering-service.ts  threat-detection-service.ts  websocket-stream-service.ts
bg-identity-ai/src/types/: biometric.ts  document.ts  express.d.ts  global.d.ts  threat.ts
bg-mobile-ai/: App.tsx  README.md  app.json  package.json
bg-mobile-ai/mobile/screens/: HomeScreen.tsx
bg-mobile-ai/mobile/services/: AuthContext.tsx  BiometricContext.tsx
docs/: CLAUDE.md  COMPREHENSIVE-ARCHITECTURE.md  EXECUTIVE-SUMMARY.md  PHASE-3A-WEEK3-IMPLEMENTATION-PLAN.md  PHASE-3A-WEEK3-PLAN.md  THREAT-AI-ARCHITECTURE.md  cyber-saas-services-structure.md  prompt-Claude.txt
shared/types/: common.ts
shared/utils/: service-client.ts
test/: README.md  package.json  run-all-tests.js
test/api/: auth-endpoints.test.js
test/cli/: integration-test.js
test/performance/: benchmark-suite.js
test/websocket/: load-test.js
tests/: README.md  package-lock.json  package.json  run-all-tests.js  verify-setup.js
tests/e2e/: cli-service-integration.test.js
tests/integration/: api-endpoints.test.js  websocket-communication.test.js
tests/utils/: test-helpers.js
threatguard-agent/: IMPLEMENTATION-STATUS.md  README.md  package.json  tsconfig.json
threatguard-agent-native/: CMakeLists.txt  README.md
threatguard-agent-native/include/: threatguard.h
threatguard-agent-native/plugins/filter_threatguard_security/: filter_threatguard_security.c  security_rules.c
threatguard-agent-native/plugins/in_threatguard_discovery/: discovery_engine.c  in_threatguard_discovery.c
threatguard-agent-native/plugins/in_threatguard_discovery/platform/: linux_discovery.c  macos_discovery.c  windows_discovery.c
threatguard-agent-native/plugins/out_threatguard_platform/: out_threatguard_platform.c  secure_transport.c
threatguard-agent-native/src/common/: config.c  logger.c  security.c  utils.c
threatguard-agent/scripts/: build.js  test-agent.js
threatguard-agent/src/: index.ts
threatguard-agent/src/common/: health-monitor.ts  logger.ts  types.ts
threatguard-agent/src/fluent-bit/: fluent-bit-manager.ts
threatguard-agent/src/wrapper/: agent.ts
threatguard-cli/: README.md  package-lock.json  package.json  test-cli.js  test-websocket-auth.js  test-websocket.js  tsconfig.json
threatguard-cli-v2/: eslint.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
threatguard-cli-v2/scripts/: build.js  dev.js
threatguard-cli/src/: index.ts
threatguard-cli/src/commands/: auth.ts  behavior.ts  config.ts  intel.ts  network.ts  threat.ts
threatguard-cli/src/services/: api.ts  websocket.ts
threatguard-cli/src/types/: index.ts
threatguard-cli/src/ui/: command-interface.ts  dashboard.ts  interactive.ts  realtime-stream.ts
threatguard-cli/src/utils/: config.ts  formatter.ts  logger.ts
(+56 files in other folders)
